// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge Bithomp 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge PayId 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge Success 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        Success
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        Success
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        Success
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge XRPLNS 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge XRPScan 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement Selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F8FAFD",
            "borderColor": "#F8FAFD",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          Object {
            "backgroundColor": "#F0F3FF",
            "borderColor": "#3052FF",
            "borderWidth": 2,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "justifyContent": "center",
            },
            Object {
              "height": 96.42857142857143,
              "width": 96.42857142857143,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "IconGlobe",
            }
          }
          style={
            Array [
              Object {
                "resizeMode": "contain",
              },
              Object {
                "height": 53.03571428571429,
                "tintColor": "#848DB8",
                "width": 53.03571428571429,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                Object {
                  "color": "#3052FF",
                },
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#3fa3b5",
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "ProximaNova-Bold",
                    "fontSize": 18,
                  },
                  Object {
                    "fontSize": 18,
                  },
                ]
              }
            >
              Bithomp
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#848DB8",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              Object {
                "color": "#3052FF",
              },
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement WithSource 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F8FAFD",
            "borderColor": "#F8FAFD",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "justifyContent": "center",
            },
            Object {
              "height": 96.42857142857143,
              "width": 96.42857142857143,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "IconGlobe",
            }
          }
          style={
            Array [
              Object {
                "resizeMode": "contain",
              },
              Object {
                "height": 53.03571428571429,
                "tintColor": "#848DB8",
                "width": 53.03571428571429,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                null,
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#3fa3b5",
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "ProximaNova-Bold",
                    "fontSize": 18,
                  },
                  Object {
                    "fontSize": 18,
                  },
                ]
              }
            >
              Bithomp
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#848DB8",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              null,
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F8FAFD",
            "borderColor": "#F8FAFD",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "justifyContent": "center",
            },
            Object {
              "height": 96.42857142857143,
              "width": 96.42857142857143,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "IconProfile",
            }
          }
          style={
            Array [
              Object {
                "resizeMode": "contain",
              },
              Object {
                "height": 53.03571428571429,
                "tintColor": "#848DB8",
                "width": 53.03571428571429,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                null,
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#848DB8",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              null,
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;
